Added floating boxes

--- a/html/index.html
+++ b/html/index.html
@@ -26,9 +26,24 @@
         </div>
     </header>
     <main>
-        <div class="background-container">
-            
+
+        <div class="rectangle">
+            <!-- <p>Test</p> -->
         </div>
+
+        <div class="rectangle">
+            <!-- <p>Test</p> -->
+        </div>
+
+        <div class="rectangle">
+            <!-- <p>Test</p> -->
+        </div>
+
+        <div class="rectangle">
+            <!-- <p>Test</p> -->
+        </div>
+        
+
     </main>
     <footer>
         <img id = "github" class="socialMediaIcon" src="../images/social_media/github.png" alt="Logo Small">
