--- a/html/index.html
+++ b/html/index.html
@@ -27,6 +27,15 @@
     </header>
     <main>
 
+
+        <div class="rectangle">
+            <!-- <p>Test</p> -->
+        </div>
+
+        <div class="rectangle">
+            <!-- <p>Test</p> -->
+        </div>
+
         <div class="rectangle">
             <!-- <p>Test</p> -->
         </div>
@@ -43,6 +52,7 @@
             <!-- <p>Test</p> -->
         </div>
         
+
 
     </main>
     <footer>
