Added footer's functionality

--- a/html/login.html
+++ b/html/login.html
@@ -78,5 +78,6 @@
 
     <!-- Scripts -->
     <script src="../scripts/script.js"></script>
+    <script src="../scripts/footer.js"></script>
 </body>
 </html>
