--- a/html/register.html
+++ b/html/register.html
@@ -79,5 +79,6 @@
 
     <!-- Scripts -->
     <script src="../scripts/script.js"></script>
+    <script src="../scripts/footer.js"></script>
 </body>
 </html>
