Added contact -> email integration for backend

--- a/html/login.html
+++ b/html/login.html
@@ -54,7 +54,7 @@
 
                 <div id = "line"></div>
 
-                <form id = "login_form" action="/profile" method="post">
+                <form id = "login_form" action="/index.html" method="post">
 
                     <label><p class ="gradient_Text">Email</p></label><br>
                     <input type="text" name="Email" id="Email" autocomplete="off" ><br>
@@ -78,5 +78,6 @@
 
     <!-- Scripts -->
     <script src="../scripts/footer.js"></script>
+    <script src="../scripts/login.js"></script>
 </body>
 </html>
