--- a/html/contact.html
+++ b/html/contact.html
@@ -25,9 +25,9 @@
         <div class="right">
             <nav>
                 <ul>
-                    <li class="gradient_Text"><a href="#">Home</a></li>
-                    <li class="gradient_Text"><a href="#">About</a></li>
-                    <li class="gradient_Text"><a href="#">Contact</a></li>
+                  <li class="gradient_Text"><a href="index.html">Home</a></li>
+                  <li class="gradient_Text"><a href="index.html">About</a></li>
+                  <li class="gradient_Text"><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -44,10 +44,10 @@
                 <path d="M70.865,101.78c0,4.774,3.886,8.657,8.66,8.657c4.774,0,8.657-3.883,8.657-8.657c0-4.773-3.883-8.656-8.657-8.656    C74.751,93.124,70.865,97.006,70.865,101.78z"></path>
               </svg>
             </div>
-            <form action="#" method="post" id="contact_form">
+            <form action="/sendEmail" method="post" id="contact_form">
               <div id="name">
                 <label for="name_input"></label>
-                <input type="text" placeholder="My name is" name="namae" id="name_input" autocomplete="off" required>
+                <input type="text" placeholder="My name is" name="nume" id="name_input" autocomplete="off" required>
               </div>
               <div class="telephone">
                 <input type="text" placeholder="My number is" name="telephone" pattern="07[0-9]{8}" id="telephone_input" required autocomplete="off" oninvalid="this.setCustomValidity('Please enter a valid phone number in the format 07XXXXXXXX')" oninput="this.setCustomValidity('')">
