--- a/html/register.html
+++ b/html/register.html
@@ -54,7 +54,7 @@
 
             <div id = "line"></div>
 
-            <form id = "login_form">
+            <form id = "login_form" action="/login.html" method="post">
 
                 <label><p class ="gradient_Text">Email</p></label><br>
                 <input type="email" name="Email" id="Email" autocomplete="off"><br>
@@ -79,5 +79,6 @@
 
     <!-- Scripts -->
     <script src="../scripts/footer.js"></script>
+    <script src="../scripts/register.js"></script>
 </body>
 </html>
