The changes made in the all nighter

--- a/html/profile.html
+++ b/html/profile.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Profile | HeMa</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/template.css">
+    <link rel="stylesheet" href="../css/cards.css">
+    <link rel="stylesheet" href="../css/test.css">
+    <link rel="stylesheet" href="../css/profile.css">
     <link rel="icon" href="../images/website_Icon/plant.png" type="image/x-icon">
 </head>
 
@@ -18,29 +21,110 @@
         <div class="right">
             <nav>
                 <ul>
-                    <li class="gradient_Text"><a href="#">Home</a></li>
-                    <li class="gradient_Text"><a href="#">About</a></li>
-                    <li class="gradient_Text"><a href="#">Contact</a></li>
+                    <li class="gradient_Text"><a href="index.html">Home</a></li>
+                    <li class="gradient_Text"><a href="about.html">About</a></li>
+                    <li class="gradient_Text"><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
     <main class="profile-main">
-        <div class="profile-container">
-            <div class="profile-header gradient_Text">
-                <img src="../images/profile/user.png" alt="Profile Picture" class="profile-pic">
-                <h2>Username: JohnDoe123</h2>
-                <p>Address: 123 Green Street, Herbville, Earth</p>
+
+        <div class="profile-header gradient_Text">
+            <img src="../images/profile/user.png" alt="Profile Picture" class="profile-pic">
+            <div class="user-details">
+                <h2>JohnDoe123</h2>
+                <p class="user-info">123 Green Street, Herbville, Earth</p>
+                <p class="user-info">johndoe123@gmail.com</p>
             </div>
-            <div class="profile-info">
-                <h3>My Plants</h3>
-                <ul class="plants-list">
-                    <li><a href="plant-profile.html?plant=Rosemary">Rosemary</a></li>
-                    <li><a href="plant-profile.html?plant=Lavender">Lavender</a></li>
-                    <li><a href="plant-profile.html?plant=Mint">Mint</a></li>
-                </ul>
+        </div>
+        <div class="plant-cards-container">
+            <div class="card">
+                <div class="wrap animate pop">
+                    <div class="overlay">
+                        <div class="overlay-content animate slide-left delay-2">
+                            <h1 class="animate slide-left pop delay-4">Plant1</h1>
+                            <p class="animate slide-left pop delay-5" style="color: white; margin-bottom: 2rem;">Kingdom: <em>Plantae</em></p>
+                        </div>
+                        <div class="image-content animate slide delay-5"></div>
+                        <div class="dots animate">
+                            <div class="dot animate slide-up delay-6"></div>
+                            <div class="dot animate slide-up delay-7"></div>
+                            <div class="dot animate slide-up delay-8"></div>
+                        </div>
+                    </div>
+                    <div class="text">
+                        <p><img class="inset" src="https://assets.codepen.io/4787486/oak_1.jpg" alt="" />Trees are woody perennial plants that are a member of the kingdom <em>Plantae</em>. All species of trees are grouped by their genus, family, and order. This helps make identifying and studying trees easier.</p>
+                        <p>Apart from providing oxygen for the planet and beauty when they bloom or turn color, trees are very useful. Certain species of hardwood and softwood trees are excellent for timber, making furniture, and paper.</p>
+                        <p>When managed properly, trees are a good source of renewable energy and construction material.</p>
+                    </div>
+                </div>
             </div>
+            <div class="card">
+                <div class="wrap animate pop">
+                    <div class="overlay">
+                        <div class="overlay-content animate slide-left delay-2">
+                            <h1 class="animate slide-left pop delay-4">Plant2</h1>
+                            <p class="animate slide-left pop delay-5" style="color: white; margin-bottom: 2rem;">Kingdom: <em>Plantae</em></p>
+                        </div>
+                        <div class="image-content animate slide delay-5"></div>
+                        <div class="dots animate">
+                            <div class="dot animate slide-up delay-6"></div>
+                            <div class="dot animate slide-up delay-7"></div>
+                            <div class="dot animate slide-up delay-8"></div>
+                        </div>
+                    </div>
+                    <div class="text">
+                        <p><img class="inset" src="https://assets.codepen.io/4787486/oak_1.jpg" alt="" />Trees are woody perennial plants that are a member of the kingdom <em>Plantae</em>. All species of trees are grouped by their genus, family, and order. This helps make identifying and studying trees easier.</p>
+                        <p>Apart from providing oxygen for the planet and beauty when they bloom or turn color, trees are very useful. Certain species of hardwood and softwood trees are excellent for timber, making furniture, and paper.</p>
+                        <p>When managed properly, trees are a good source of renewable energy and construction material.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="wrap animate pop">
+                    <div class="overlay">
+                        <div class="overlay-content animate slide-left delay-2">
+                            <h1 class="animate slide-left pop delay-4">Plant3</h1>
+                            <p class="animate slide-left pop delay-5" style="color: white; margin-bottom: 2rem;">Kingdom: <em>Plantae</em></p>
+                        </div>
+                        <div class="image-content animate slide delay-5"></div>
+                        <div class="dots animate">
+                            <div class="dot animate slide-up delay-6"></div>
+                            <div class="dot animate slide-up delay-7"></div>
+                            <div class="dot animate slide-up delay-8"></div>
+                        </div>
+                    </div>
+                    <div class="text">
+                        <p><img class="inset" src="https://assets.codepen.io/4787486/oak_1.jpg" alt="" />Trees are woody perennial plants that are a member of the kingdom <em>Plantae</em>. All species of trees are grouped by their genus, family, and order. This helps make identifying and studying trees easier.</p>
+                        <p>Apart from providing oxygen for the planet and beauty when they bloom or turn color, trees are very useful. Certain species of hardwood and softwood trees are excellent for timber, making furniture, and paper.</p>
+                        <p>When managed properly, trees are a good source of renewable energy and construction material.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="wrap animate pop">
+                    <div class="overlay">
+                        <div class="overlay-content animate slide-left delay-2">
+                            <h1 class="animate slide-left pop delay-4">Plant4</h1>
+                            <p class="animate slide-left pop delay-5" style="color: white; margin-bottom: 2rem;">Kingdom: <em>Plantae</em></p>
+                        </div>
+                        <div class="image-content animate slide delay-5"></div>
+                        <div class="dots animate">
+                            <div class="dot animate slide-up delay-6"></div>
+                            <div class="dot animate slide-up delay-7"></div>
+                            <div class="dot animate slide-up delay-8"></div>
+                        </div>
+                    </div>
+                    <div class="text">
+                        <p><img class="inset" src="https://assets.codepen.io/4787486/oak_1.jpg" alt="" />Trees are woody perennial plants that are a member of the kingdom <em>Plantae</em>. All species of trees are grouped by their genus, family, and order. This helps make identifying and studying trees easier.</p>
+                        <p>Apart from providing oxygen for the planet and beauty when they bloom or turn color, trees are very useful. Certain species of hardwood and softwood trees are excellent for timber, making furniture, and paper.</p>
+                        <p>When managed properly, trees are a good source of renewable energy and construction material.</p>
+                    </div>
+                </div>
+            </div>
+            
         </div>
     </main>
     <footer>
