--- a/html/contact.html
+++ b/html/contact.html
@@ -25,9 +25,9 @@
         <div class="right">
             <nav>
                 <ul>
-                    <li class="gradient_Text"><a href="#">Home</a></li>
-                    <li class="gradient_Text"><a href="#">About</a></li>
-                    <li class="gradient_Text"><a href="#">Contact</a></li>
+                  <li class="gradient_Text"><a href="index.html">Home</a></li>
+                    <li class="gradient_Text"><a href="about.html">About</a></li>
+                    <li class="gradient_Text"><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
