--- a/html/register.html
+++ b/html/register.html
@@ -57,11 +57,11 @@
             <form id = "login_form" action="/login.html" method="post">
 
                 <label><p class ="gradient_Text">Email</p></label><br>
-                <input type="email" name="Email" id="Email" autocomplete="off"><br>
+                <input type="email" name="Email" id="Email" placeholder="My Email Is" autocomplete="off"><br>
                 <label><p class ="gradient_Text">Name</p></label><br>
-                <input type="text" name="Name" id="Name" autocomplete="off"><br>
+                <input type="text" name="Name" id="Name" placeholder="My Name Is" autocomplete="off"><br>
                 <label><p class ="gradient_Text">Password</p></label><br>
-                <input type="password" name="Password" id="Password" autocomplete="off"><br><br>
+                <input type="password" name="Password" id="Password" placeholder="My Password Is" autocomplete="off"><br><br>
                 
                 <p id = "Error_Message"></p>
 
