Added delete client button functionality (admin)

--- a/html/listOfClients.html
+++ b/html/listOfClients.html
@@ -24,18 +24,22 @@
 
             <section>
                 <table id="clientsTable">
-                    <tr>
-                        <th><h2 class="idcol">Id</h2></th>
-                        <th><h2>Name</h2></th>
-                        <th><h2>Email</h2></th>
-                    </tr>
-                    <tr>
-                        <th><h2 class="idcol">1</h2></th>
-                        <th class="scrollable-content"><h2>Rosca Alexandru-David</h2></th>
-                        <th><h2>alexandrurosca434@gmail.com</h2></th>
-                        <th><h2 class="emoji">🗑️</h2></th>
-                        <th><h2 class="emoji">🌱</h2></th>
-                    </tr>
+                    <thead>
+                        <tr>
+                            <th><h2 class="idcol">Id</h2></th>
+                            <th><h2>Name</h2></th>
+                            <th><h2>Email</h2></th>
+                        </tr>
+                    </thead>
+                    <tbody id="clientsTableBody">
+                        <tr>
+                            <th><h2 class="idcol">1</h2></th>
+                            <th class="scrollable-content"><h2>Rosca Alexandru-David</h2></th>
+                            <th><h2>alexandrurosca434@gmail.com</h2></th>
+                            <th class="deleteBtn"><h2 class="emoji">🗑️</h2></th>
+                            <th><h2 class="emoji">🌱</h2></th>
+                        </tr>
+                    </tbody>
                     
                     
                 </table>
