Added generate report page (admin)

--- a/html/listOfClients.html
+++ b/html/listOfClients.html
@@ -12,7 +12,7 @@
 
 <body>    
     <header>
-        <p class="gradient_Text"> Admin Dashboard</p>
+        <p class="gradient_Text"><a href="/html/admin.html">Admin Dashboard</a></p>
     </header>
     <main>
 
