--- a/html/admin.html
+++ b/html/admin.html
@@ -12,7 +12,7 @@
 
 <body>    
     <header>
-        <p class="gradient_Text"> Admin Dashboard</p>
+        <p class="gradient_Text"><a href="/html/admin.html">Admin Dashboard</a></p>
     </header>
     <main>
 
@@ -22,13 +22,12 @@
 
             <div id="panelLine"></div>
 
-            <section>
+            <section id="listClients">
                 <h2>List of Clients</h2>
                 <p>Delete clients or modify their albums</p>
             </section>
 
-            <!-- User Management Section -->
-            <section>
+            <section id="generateReports">
                 <h2>Generate Reports</h2>
                 <p>Generate reports of clients and plants</p>
             </section>
@@ -44,5 +43,6 @@
 
     <!-- Scripts -->
     <script src="../scripts/footer.js"></script>
+    <script src="../scripts/admin.js"></script>
 </body>
 </html>
