Added landing page

--- a/html/generateReports.html
+++ b/html/generateReports.html
@@ -13,7 +13,7 @@
 
 <body>    
     <header>
-        <p class="gradient_Text"><a href="/html/admin.html">Admin Dashboard</a></p>
+        <p class="gradient_Text"><a href="../html/admin.html">Admin Dashboard</a></p>
     </header>
     <main>
 
