--- a/html/login.html
+++ b/html/login.html
@@ -54,7 +54,7 @@
 
                 <div id = "line"></div>
 
-                <form id = "login_form" action="/index.html" method="post">
+                <form id = "login_form" action="../html/index.html" method="post">
 
                     <label><p class ="gradient_Text">Email</p></label><br>
                     <input type="text" name="Email" id="Email" placeholder="My Email Is" autocomplete="off" ><br>
