--- a/html/register.html
+++ b/html/register.html
@@ -79,6 +79,6 @@
 
     <!-- Scripts -->
     <script src="../scripts/footer.js"></script>
-    <script src="../scripts/register.js"></script>
+    <script src="../scripts/register.js"></script> THE LOGIC IS HERE 
 </body>
 </html>
