Added flower template

--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,32 @@
 </head>
 
 <body>    
-    <header>
+    <div class="nav">
+        <input type="checkbox" id="nav-check">
+        <div class="nav-header">
+          <div class="nav-title">
+            <div class="left">
+                <img id="plant_Logo" src="../images/website_Icon/plant.png" alt="Logo Small">
+                <h3 class="gradient_Text">HeMa (Herbal Web Manager)</h3>
+            </div>
+          </div>
+        </div>
+        <div class="nav-btn">
+          <label for="nav-check">
+            <span></span>
+            <span></span>
+            <span></span>
+          </label>
+        </div>
+        
+        <div class="nav-links">
+          <a href="index.html" >Home</a>
+          <a href="about.html" >About</a>
+          <a href="contact.html" >Contact</a>
+          <a href="landingPage.html">Logout</a>
+        </div>
+      </div>
+    <!-- <header>
         <div class="left">
             <img id="plant_Logo" src="../images/website_Icon/plant.png" alt="Logo Small">
             <h1 class="gradient_Text">HeMa (Herbal Web Manager)</h1>
@@ -32,7 +57,7 @@
                 </ul>
             </nav>
         </div>
-    </header>
+    </header> -->
     <main>
 
         <div class="card">
