--- a/html/admin.html
+++ b/html/admin.html
@@ -7,6 +7,7 @@
     <title>HeMa</title>
     <link rel="stylesheet" href="../css/template.css">
     <link rel="stylesheet" href="../css/admin.css">
+    <link rel="stylesheet" href="../css/flower.css">
     <link rel="icon" href="../images/website_Icon/plant.png" type="image/x-icon">
 </head>
 
@@ -16,23 +17,58 @@
     </header>
     <main>
 
-        <div id="adminPanel">
 
-            <p id="controlPanel">Control Panel</p>
+            <div id="adminPanel">
 
-            <div id="panelLine"></div>
+                <p id="controlPanel">Control Panel</p>
 
-            <section id="listClients">
-                <h2>List of Clients</h2>
-                <p>Delete clients or modify their albums</p>
-            </section>
+                <div id="panelLine"></div>
 
-            <section id="generateReports">
-                <h2>Generate Reports</h2>
-                <p>Generate reports of clients and plants</p>
-            </section>
-        </div>
-        
+                <section id="listClients">
+                    <h2>List of Clients</h2>
+                    <p>Delete clients or modify their albums</p>
+                </section>
+
+                <section id="generateReports">
+                    <h2>Generate Reports</h2>
+                    <p>Generate reports of clients and plants</p>
+                </section>
+            </div>
+            <div class="f-wrapper f-wrapper--1">
+                <div class="f">
+                    <div class="flower__leaf flower__leaf--1"></div>
+                    <div class="flower__leaf flower__leaf--2"></div>
+                    <div class="flower__leaf flower__leaf--3"></div>
+                    <div class="flower__leaf flower__leaf--4"></div>
+                    <div class="flower__leaf flower__leaf--5"></div>
+                    <div class="flower__leaf flower__leaf--6"></div>
+                    <div class="flower__leaf flower__leaf--7"></div>
+                </div>
+            </div>
+
+            <div class="f-wrapper f-wrapper--2">
+                <div class="f">
+                    <div class="flower__leaf flower__leaf--1"></div>
+                    <div class="flower__leaf flower__leaf--2"></div>
+                    <div class="flower__leaf flower__leaf--3"></div>
+                    <div class="flower__leaf flower__leaf--4"></div>
+                    <div class="flower__leaf flower__leaf--5"></div>
+                    <div class="flower__leaf flower__leaf--6"></div>
+                    <div class="flower__leaf flower__leaf--7"></div>
+                </div>
+            </div>
+
+            <div class="f-wrapper f-wrapper--3">
+                <div class="f">
+                    <div class="flower__leaf flower__leaf--1"></div>
+                    <div class="flower__leaf flower__leaf--2"></div>
+                    <div class="flower__leaf flower__leaf--3"></div>
+                    <div class="flower__leaf flower__leaf--4"></div>
+                    <div class="flower__leaf flower__leaf--5"></div>
+                    <div class="flower__leaf flower__leaf--6"></div>
+                    <div class="flower__leaf flower__leaf--7"></div>
+                </div>
+            </div>
 
     </main>
     <footer>
