--- a/html/landingPage.html
+++ b/html/landingPage.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HeMa</title>
     <link rel="stylesheet" href="../css/template.css">
+    <link rel="stylesheet" href="../css/flower.css">
     <link rel="stylesheet" href="../css/landingPage.css">
     <link rel="icon" href="../images/website_Icon/plant.png" type="image/x-icon">
 </head>
@@ -69,6 +70,42 @@
                 <p>Create an account and your collection</p>
             </section>
         </div>
+
+        <div class="f-wrapper f-wrapper--1">
+          <div class="f">
+              <div class="flower__leaf flower__leaf--1"></div>
+              <div class="flower__leaf flower__leaf--2"></div>
+              <div class="flower__leaf flower__leaf--3"></div>
+              <div class="flower__leaf flower__leaf--4"></div>
+              <div class="flower__leaf flower__leaf--5"></div>
+              <div class="flower__leaf flower__leaf--6"></div>
+              <div class="flower__leaf flower__leaf--7"></div>
+          </div>
+      </div>
+
+      <div class="f-wrapper f-wrapper--2">
+          <div class="f">
+              <div class="flower__leaf flower__leaf--1"></div>
+              <div class="flower__leaf flower__leaf--2"></div>
+              <div class="flower__leaf flower__leaf--3"></div>
+              <div class="flower__leaf flower__leaf--4"></div>
+              <div class="flower__leaf flower__leaf--5"></div>
+              <div class="flower__leaf flower__leaf--6"></div>
+              <div class="flower__leaf flower__leaf--7"></div>
+          </div>
+      </div>
+
+      <div class="f-wrapper f-wrapper--3">
+          <div class="f">
+              <div class="flower__leaf flower__leaf--1"></div>
+              <div class="flower__leaf flower__leaf--2"></div>
+              <div class="flower__leaf flower__leaf--3"></div>
+              <div class="flower__leaf flower__leaf--4"></div>
+              <div class="flower__leaf flower__leaf--5"></div>
+              <div class="flower__leaf flower__leaf--6"></div>
+              <div class="flower__leaf flower__leaf--7"></div>
+          </div>
+      </div>
 
     </main>
     <footer>
