--- a/html/listOfClients.html
+++ b/html/listOfClients.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HeMa</title>
     <link rel="stylesheet" href="../css/template.css">
+    <link rel="stylesheet" href="../css/flower.css">
     <link rel="stylesheet" href="../css/listOfClients.css">
     <link rel="icon" href="../images/website_Icon/plant.png" type="image/x-icon">
 </head>
@@ -23,6 +24,9 @@
             <div id="panelLine"></div>
 
             <section>
+
+                <input id="textInput" placeholder="Serach by email"></input>
+
                 <table id="clientsTable">
                     <thead>
                         <tr>
@@ -32,6 +36,11 @@
                         </tr>
                     </thead>
                     <tbody id="clientsTableBody">
+                        <tr id="hidden">
+                            <th><h2 class="idcol">-</h2></th>
+                            <th class="scrollable-content"><h2>There is noone here</h2></th>
+                            <th><h2>With this given email address</h2></th>
+                        </tr>
                         <tr>
                             <th><h2 class="idcol">1</h2></th>
                             <th class="scrollable-content"><h2>Rosca Alexandru-David</h2></th>
@@ -45,6 +54,42 @@
                 </table>
             </section>
         
+        </div>
+
+        <div class="f-wrapper f-wrapper--1">
+            <div class="f">
+                <div class="flower__leaf flower__leaf--1"></div>
+                <div class="flower__leaf flower__leaf--2"></div>
+                <div class="flower__leaf flower__leaf--3"></div>
+                <div class="flower__leaf flower__leaf--4"></div>
+                <div class="flower__leaf flower__leaf--5"></div>
+                <div class="flower__leaf flower__leaf--6"></div>
+                <div class="flower__leaf flower__leaf--7"></div>
+            </div>
+        </div>
+
+        <div class="f-wrapper f-wrapper--2">
+            <div class="f">
+                <div class="flower__leaf flower__leaf--1"></div>
+                <div class="flower__leaf flower__leaf--2"></div>
+                <div class="flower__leaf flower__leaf--3"></div>
+                <div class="flower__leaf flower__leaf--4"></div>
+                <div class="flower__leaf flower__leaf--5"></div>
+                <div class="flower__leaf flower__leaf--6"></div>
+                <div class="flower__leaf flower__leaf--7"></div>
+            </div>
+        </div>
+
+        <div class="f-wrapper f-wrapper--3">
+            <div class="f">
+                <div class="flower__leaf flower__leaf--1"></div>
+                <div class="flower__leaf flower__leaf--2"></div>
+                <div class="flower__leaf flower__leaf--3"></div>
+                <div class="flower__leaf flower__leaf--4"></div>
+                <div class="flower__leaf flower__leaf--5"></div>
+                <div class="flower__leaf flower__leaf--6"></div>
+                <div class="flower__leaf flower__leaf--7"></div>
+            </div>
         </div>
     
     </main>
