Colectii plus profil etc

--- a/html/about.html
+++ b/html/about.html
@@ -39,9 +39,8 @@
         </div>
     </header>
 
-    <main class="about-main">
-
-        <article class="cta">
+    <main class="about-main facts-section">
+        <article class="cta fact-item">
             <img src='../images/background/leaf1.jpg' alt='Bluetit'>
             <div class="cta__text-column">
                 <h2>Enter to see plant</h2>
@@ -51,7 +50,7 @@
             </div>
         </article>
         
-        <article class="cta">
+        <article class="cta fact-item">
             <img src='../images/background/white1.jpg' alt='Small blue-grey yellow-breasted bird'>
             <div class="cta__text-column">
                 <h2>Enter to see profile</h2>
@@ -61,7 +60,7 @@
             </div>
         </article>
 
-        <article class="cta">
+        <article class="cta fact-item">
             <img src='../images/background/leaf2.jpg' alt='Small blue-grey yellow-breasted bird'>
             <div class="cta__text-column">
                 <h2>Enter to login</h2>
@@ -70,9 +69,6 @@
                 <a href="login.html">Read all about it</a>
             </div>
         </article>
-
-        
-
     </main>
 
     <footer>
