--- a/html/admin.html
+++ b/html/admin.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HeMa</title>
+    <title>Admin Panel</title>
     <link rel="stylesheet" href="../css/template.css">
     <link rel="stylesheet" href="../css/admin.css">
     <link rel="stylesheet" href="../css/flower.css">
