--- a/html/listOfClients.html
+++ b/html/listOfClients.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HeMa</title>
+    <title>Clients List</title>
     <link rel="stylesheet" href="../css/template.css">
     <link rel="stylesheet" href="../css/flower.css">
     <link rel="stylesheet" href="../css/listOfClients.css">
@@ -25,7 +25,7 @@
 
             <section>
 
-                <input id="textInput" placeholder="Serach by email"></input>
+                <input id="textInput" placeholder="Search by email"></input>
 
                 <table id="clientsTable">
                     <thead>
