--- a/html/profile.html
+++ b/html/profile.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Profile</title>
     <link rel="stylesheet" href="../css/template.css">
-    <link rel="stylesheet" href="../css/profile.css">
+    <link rel="stylesheet" href="../css/hover-cards.css">
+    <!-- <link rel="stylesheet" href="../css/profile.css"> -->
     <link rel="stylesheet" href="../css/collection-list.css">
     <link rel="icon" href="../images/website_Icon/plant.png" type="image/x-icon">
 </head>
@@ -37,27 +38,20 @@
     <main>
         <div class="container">
             <div class="main-body">
-                <!-- <nav aria-label="breadcrumb" class="main-breadcrumb">
-                    <ol>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="javascript:void(0)">User</a></li>
-                        <li aria-current="page">User Profile</li>
-                    </ol>
-                </nav>
-         -->
                 <div class="gutters-sm">
                     <div class="mb-3">
-                        <div class="card">
-                            <div class="card-body">
+                        <div class="collections-card">
+                            <div>
                                 <div class="d-flex flex-column align-items-center text-center">
+                                    <h2 class="collections-title">PROFILE</h2>
                                     <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" width="150">
-                                    <div class="mt-3">
+                                    <div class="collections  collection-particularity">
                                         <h4>John Doe</h4>
                                         <p>Full Stack Developer</p>
                                         <p>Bay Area, San Francisco, CA</p>
                                         <div class="button-div">
-                                            <button class="follow-btn">Follow</button>
-                                            <button class="message-btn">Message</button>
+                                            <button class="format-btn">Follow</button>
+                                            <button class="format-btn">Message</button>
                                         </div>
                                     </div>
                                 </div>
@@ -69,30 +63,48 @@
                             <h2 class="collections-title">SOCIAL MEDIA</h2>
                             <div class="collections">
                                 <div class="collection-item">
-                                    <button class="socialMediaIcon"><img src="../images/social_media/icons8-facebook-100.png" alt="Facebook"></button>
+                                    <button class="socialMediaIcon2"><img src="../images/social_media/icons8-facebook-100.png" alt="Facebook"></button>
                                 </div>
                                 <div class="collection-item">
-                                    <button class="socialMediaIcon"><img src="../images/social_media/icons8-github-100.png" alt="Twitter"></button>
+                                    <button class="socialMediaIcon2"><img src="../images/social_media/icons8-github-100.png" alt="Twitter"></button>
                                 </div>
                                 <div class="collection-item">
-                                    <button class="socialMediaIcon"><img src="../images/social_media/icons8-instagram-100.png" alt="Instagram"></button>
+                                    <button class="socialMediaIcon2"><img src="../images/social_media/icons8-instagram-100.png" alt="Instagram"></button>
                                 </div>
                                 <div class="collection-item">
-                                    <button class="socialMediaIcon"><img src="../images/social_media/icons8-twitter-100.png" alt="LinkedIn"></button>
+                                    <button class="socialMediaIcon2"><img src="../images/social_media/icons8-twitter-100.png" alt="LinkedIn"></button>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    
                     <div class="mb-3">
                         <div class="card collections-card">
                             <h2 class="collections-title">My Collections</h2>
                             <div class="collections">
-                                <div class="collection-button"><button>Collection 1</button></div>
-                                <div class="collection-button"><button>Collection 2</button></div>
-                                <div class="collection-button"><button>Collection 3</button></div>
-                                <div class="collection-button"><button>Collection 4</button></div>
-                                <div class="collection-button"><button>Collection 5</button></div>
+                                <figure>
+                                    <img src="https://picsum.photos/id/287/250/300" alt="Mountains">
+                                    <figcaption>Collection1</figcaption>
+                                </figure>
+                                <figure style="--c:#fff5">
+                                    <img src="https://picsum.photos/id/475/250/300" alt="Mountains">
+                                    <figcaption>Collection2</figcaption>
+                                </figure>
+                                <figure>
+                                    <img src="https://picsum.photos/id/287/250/300" alt="Mountains">
+                                    <figcaption>Collection3</figcaption>
+                                </figure>
+                                <figure style="--c:#fff5">
+                                    <img src="https://picsum.photos/id/475/250/300" alt="Mountains">
+                                    <figcaption>Collection4</figcaption>
+                                </figure>
+                                <figure>
+                                    <img src="https://picsum.photos/id/287/250/300" alt="Mountains">
+                                    <figcaption>Collection5</figcaption>
+                                </figure>
+                                <figure style="--c:#fff5">
+                                    <img src="https://picsum.photos/id/475/250/300" alt="Mountains">
+                                    <figcaption>Collection6</figcaption>
+                                </figure>
                             </div>
                         </div>
                     </div>
