Made the feed responsive

--- a/html/feed.html
+++ b/html/feed.html
@@ -120,7 +120,7 @@
               </thead>
               <tbody class="clientsTableBody">
                   <tr>
-                      <td class="scrollable-content"><h2>Mountain Plants Collection</h2></td>
+                      <td class="scrollable-content"><h2>Gigi helper</h2></td>
                       <td class="scrollable-content"><h2>Rosca Alexandru David</h2></td>
                       <td class="scrollable-content"><h2>4/10/2024</h2></td>
                   </tr>
