Added descriptions for login/register, added picutres to the landing page

--- a/html/admin.html
+++ b/html/admin.html
@@ -33,6 +33,17 @@
                     <h2>Generate Reports</h2>
                     <p>Generate reports of clients and plants</p>
                 </section>
+
+                <section id="adminLogout">
+                    <h2>Logout</h2>
+                    <p>Logout and go back to the main screen</p>
+                </section>
+
+                <section id="error">
+                    <h2>Error404 Page</h2>
+                    <p>Interact with the error404 webpage</p>
+                </section>
+
             </div>
             <div class="f-wrapper f-wrapper--1">
                 <div class="f">
