Added index(about) data

--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
     <title>HeMa</title>
     <link rel="stylesheet" href="../css/template.css">
     <link rel="stylesheet" href="../css/cards.css">
-    <link rel="stylesheet" href="../css/test.css">
+    <link rel="stylesheet" href="../css/aboutUsCards.css">
     <link rel="icon" href="../images/website_Icon/plant.png" type="image/x-icon">
 </head>
 
@@ -63,10 +63,10 @@
             <div class="wrap animate pop">
                 <div class="overlay">
                     <div class="overlay-content animate slide-left delay-2">
-                        <h1 class="animate slide-left pop delay-4">Trees</h1>
-                        <p class="animate slide-left pop delay-5" style="color: white; margin-bottom: 2rem;">Kingdom: <em>Plantae</em></p>
+                        <h1 class="animate slide-left pop delay-4">Our Goals</h1>
+                        <p class="animate slide-left pop delay-5" id="smallTitle">Herbal Web <em>Manager</em></p>
                     </div>
-                    <div class="image-content animate slide delay-5"></div>
+                    <div class="image-content animate slide delay-5" id="card1"></div>
                     <div class="dots animate">
                         <div class="dot animate slide-up delay-6"></div>
                         <div class="dot animate slide-up delay-7"></div>
@@ -74,9 +74,8 @@
                     </div>
                 </div>
                 <div class="text">
-                    <p><img class="inset" src="https://assets.codepen.io/4787486/oak_1.jpg" alt="" />Trees are woody perennial plants that are a member of the kingdom <em>Plantae</em>. All species of trees are grouped by their genus, family, and order. This helps make identifying and studying trees easier.</p>
-                    <p>Apart from providing oxygen for the planet and beauty when they bloom or turn color, trees are very useful. Certain species of hardwood and softwood trees are excellent for timber, making furniture, and paper.</p>
-                    <p>When managed properly, trees are a good source of renewable energy and construction material.</p>
+                    <p><img class="inset" src="../images/website_Icon/plant.png" alt="" width="150px" />‎  ‎  ‎  At HeMa, our primary goal is to bridge the gap between botanical enthusiasts and the fascinating world of plant biodiversity through innovative digital solutions. We aspire to create a dynamic online platform that serves as a comprehensive resource for plant exploration, education, and conservation.</p>
+                    <p>‎  ‎  ‎ ‎ Some of our goals are to facilitate exploration and discovery of new species, to promote education and awareness of protected and rare plants, to encourage collaboration and community bonding to advance conservation and sustainability and to create a connection point between nature and technology through an internal drive that aims to innovate and advance this topic</p>
                 </div>
             </div>
         </div>
@@ -85,10 +84,10 @@
             <div class="wrap animate pop">
                 <div class="overlay">
                     <div class="overlay-content animate slide-left delay-2">
-                        <h1 class="animate slide-left pop delay-4">Trees</h1>
-                        <p class="animate slide-left pop delay-5" style="color: white; margin-bottom: 2.5rem;">Kingdom: <em>Plantae</em></p>
+                        <h1 class="animate slide-left pop delay-4">What we Offer?</h1>
+                        <p class="animate slide-left pop delay-5" id="smallTitle"></p>
                     </div>
-                    <div class="image-content animate slide delay-5"></div>
+                    <div class="image-content animate slide delay-5" id="card2"></div>
                     <div class="dots animate">
                         <div class="dot animate slide-up delay-6"></div>
                         <div class="dot animate slide-up delay-7"></div>
@@ -96,21 +95,27 @@
                     </div>
                 </div>
                 <div class="text">
-                    <p><img class="inset" src="https://assets.codepen.io/4787486/oak_1.jpg" alt="" />Trees are woody perennial plants that are a member of the kingdom <em>Plantae</em>. All species of trees are grouped by their genus, family, and order. This helps make identifying and studying trees easier.</p>
-                    <p>Apart from providing oxygen for the planet and beauty when they bloom or turn color, trees are very useful. Certain species of hardwood and softwood trees are excellent for timber, making furniture, and paper.</p>
-                    <p>When managed properly, trees are a good source of renewable energy and construction material.</p>
+                    <p><img class="inset" src="../images/background/whatweoffer.webp" alt="" />‎  ‎  ‎  At HeMa, we offer a comprehensive suite of features and resources designed to enhance your botanical exploration and learning experience. Here's what you can expect to find here:</p>
+                    <ul>
+                        <li><p>Comprehensive Digital Herbarium: Access a vast collection of pressed plant specimens from around the world, meticulously cataloged and annotated for easy exploration.</p></li>
+                        <li><p>Advanced Multi-Criteria Search: Find specific plants quickly and efficiently using our advanced search filters, including species, habitat, geographic location, and more.</p></li>
+                        <li><p>Curated Themed Collections: Explore curated collections tailored to specific interests and themes, such as medicinal plants, native flora, rare species, and more.</p></li>
+                        <li><p>Educational Resources: Expand your botanical knowledge with informative articles, guides, and interactive tools covering a wide range of topics, from plant identification to ecological conservation.</p></li>
+                        <li><p>Community Engagement: Connect with a vibrant community of plant enthusiasts, researchers, educators, and conservationists. Share your discoveries, exchange ideas, and collaborate on projects that contribute to our collective understanding of plant biodiversity.</p></li>
+                        <li><p>Conservation Initiatives: oin us in our commitment to protecting and preserving our planet's precious plant life.</p></li>
+                      </ul>
                 </div>
             </div>
         </div>
 
         <div class="card">
-            <div class="wrap animate pop">
+            <div class="wrap animate pop" id="whoAreWe">
                 <div class="overlay">
                     <div class="overlay-content animate slide-left delay-2">
-                        <h1 class="animate slide-left pop delay-4">Trees</h1>
-                        <p class="animate slide-left pop delay-5" style="color: white; margin-bottom: 2.5rem;">Kingdom: <em>Plantae</em></p>
+                        <h1 class="animate slide-left pop delay-4">Who are we?</h1>
+                        <p class="animate slide-left pop delay-5" id="smallTitle"></p>
                     </div>
-                    <div class="image-content animate slide delay-5"></div>
+                    <div class="image-content animate slide delay-5" id="card3"></div>
                     <div class="dots animate">
                         <div class="dot animate slide-up delay-6"></div>
                         <div class="dot animate slide-up delay-7"></div>
@@ -118,9 +123,11 @@
                     </div>
                 </div>
                 <div class="text">
-                    <p><img class="inset" src="https://assets.codepen.io/4787486/oak_1.jpg" alt="" />Trees are woody perennial plants that are a member of the kingdom <em>Plantae</em>. All species of trees are grouped by their genus, family, and order. This helps make identifying and studying trees easier.</p>
-                    <p>Apart from providing oxygen for the planet and beauty when they bloom or turn color, trees are very useful. Certain species of hardwood and softwood trees are excellent for timber, making furniture, and paper.</p>
-                    <p>When managed properly, trees are a good source of renewable energy and construction material.</p>
+                    <img class="inset" src="../images/background/roscaAlexandru.png" alt="" />
+                    <img class="inset" src="../images/background/roscaAlexandru.png" alt="" />
+                    <p>‎  ‎  ‎  We are Rosca Alexandru David and Popa Andrei, two passionate students embarking on a journey at the esteemed Alexandru Ioan Cuza University, where we pursue our studies at the renowned Faculty of Computer Science.</p>
+                    <p>‎  ‎  ‎ Beyond the confines of academia, we are dreamers with a shared vision fueled by curiosity, and a profound love for the transformative power of technology.</p>
+                    <p>‎  ‎  ‎ ‎ As second-year students, we stand at the threshold of possibility, eager to immerse ourselves in the dynamic world of computer science and explore the endless horizons it offers. Guided by our insatiable thirst for knowledge and our unwavering commitment to excellence, we are driven by a singular purpose: to push the boundaries of what is possible and leave an indelible mark on the ever-evolving landscape of technology.</p>
                 </div>
             </div>
         </div>
