--- a/html/login.html
+++ b/html/login.html
@@ -44,9 +44,9 @@
             <div id = "line"></div>
 
             <div id="textBox">
-                <p class="gradient_Text">Welcome to our Digital Herbarium – your gateway to the fascinating world of botanical collections!</p>
+                <p class="gradient_Text">‎ ‎ ‎ ‎ ‎ ‎ ‎Welcome to our Digital Herbarium – your gateway to the fascinating world of botanical collections!</p>
                 <br>
-                <p class="gradient_Text">Step into a realm where the beauty of nature meets the convenience of modern technology. Our platform is dedicated to plant enthusiasts, nature lovers, and anyone with a curiosity about the botanical wonders that surround us.</p>
+                <p class="gradient_Text">‎ ‎ ‎ ‎ ‎ ‎ ‎Step into a realm where the beauty of nature meets the convenience of modern technology. Our platform is dedicated to plant enthusiasts, nature lovers, and anyone with a curiosity about the botanical wonders that surround us.</p>
             </div>
         </div>
 
