--- a/html/register.html
+++ b/html/register.html
@@ -44,9 +44,9 @@
             <div class = "line" id="line2"></div>
 
             <div id="textBox">
-                <p class="gradient_Text">‎ ‎ ‎ ‎ ‎ ‎ ‎‎ ‎ ‎  Create your personalized account to unlock a host of features such the ability to curate your own digital herbarium collections, share your botanical discoveries with fellow enthusiasts, and contribute to our growing repository of botanical knowledge.</p>
+                <p class="gradient_Text">‎ ‎ ‎ ‎ ‎ ‎ ‎Create your personalized account to unlock a host of features such the ability to curate your own digital herbarium collections, share your botanical discoveries with fellow enthusiasts, and contribute to our growing repository of botanical knowledge.</p>
                 <br>
-                <p class="gradient_Text">Join us on this journey of discovery and appreciation for the natural world. Let's explore, learn, and celebrate the rich tapestry of plant life together.</p>
+                <p class="gradient_Text">‎ ‎ ‎ ‎ ‎ ‎ ‎Join us on this journey of discovery and appreciation for the natural world. Let's explore, learn, and celebrate the rich tapestry of plant life together.</p>
             </div>
         </div>
 
