Added blog list/ blog creator/ examples of blogs

--- a/html/index.html
+++ b/html/index.html
@@ -124,8 +124,8 @@
                 </div>
                 <div class="text">
                     <img class="inset" src="../images/background/roscaAlexandru.png" alt="" />
-                    <img class="inset" src="../images/background/roscaAlexandru.png" alt="" />
-                    <p>‎  ‎  ‎  We are Rosca Alexandru David and Popa Andrei, two passionate students embarking on a journey at the esteemed Alexandru Ioan Cuza University, where we pursue our studies at the renowned Faculty of Computer Science.</p>
+                    <img class="inset" src="../images/background/popaAndrei.png" alt="" />
+                    <p>We are Rosca Alexandru David and Popa Andrei, two passionate students embarking on a journey at the esteemed Alexandru Ioan Cuza University, where we pursue our studies at the renowned Faculty of Computer Science.</p>
                     <p>‎  ‎  ‎ Beyond the confines of academia, we are dreamers with a shared vision fueled by curiosity, and a profound love for the transformative power of technology.</p>
                     <p>‎  ‎  ‎ ‎ As second-year students, we stand at the threshold of possibility, eager to immerse ourselves in the dynamic world of computer science and explore the endless horizons it offers. Guided by our insatiable thirst for knowledge and our unwavering commitment to excellence, we are driven by a singular purpose: to push the boundaries of what is possible and leave an indelible mark on the ever-evolving landscape of technology.</p>
                 </div>
