Final and corrected version of all pages

--- a/html/PlantProfilePage.html
+++ b/html/PlantProfilePage.html
@@ -30,9 +30,8 @@
             <div class="main-container image-background">
                 <div class="user-profile-card w-70">
                     <div class="photo-profile w-100">
-                        <!-- Plant Image -->
                         <div class="logo-image" id="plant-image">
-                            <img src="../Images/PlantProfileImages/plant-image.jpg" alt="Plant Image" style="width: 100%; border-radius: var(--border-radius);">
+                            <img src="../Images/website_Icon/LittleCactus.jpg" alt="Plant Image" style="width: 100%; border-radius: var(--border-radius);">
                         </div>
         
                         <!-- Hashtags, Collection Name, etc. -->
@@ -50,7 +49,7 @@
                         </div>
                         <div class="form-group w-100">
                             <label class="label">Collector Name</label>
-                            <p id="collector" class="form-control">Jane Doe</p>
+                            <p id="collector" class="form-control">John Doe</p>
                         </div>
                     </div>
         
@@ -88,7 +87,7 @@
                         <!-- Action Buttons -->
                         <div class="container-buttons w-100">
                             <div class="form-group w-100">
-                                <button class="button button1" onclick="location.href = '../HTML_Pages/MyGarden.html'">View My Garden</button>
+                                <button class="button button1" onclick="location.href = '../html/collection.html'">View My Garden</button>
                             </div>
                             <div class="form-group w-100">
                                 <button class="button button2" id="edit-plant-button">Edit Plant</button>
