--- a/html/collection.html
+++ b/html/collection.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/cards.css">
     <link rel="stylesheet" href="../css/test.css">
     <link rel="stylesheet" href="../css/collection.css">
+    <link rel="stylesheet" href="../css/hover-cards.css">
     <link rel="icon" href="../images/website_Icon/plant.png" type="image/x-icon">
 </head>
 
@@ -34,53 +35,60 @@
             </nav>
         </div>
     </header>
-    <main>
+    <!-- <main>
         <div class="container"></div>
             <figure style="--c:#fff5">
-                <img src="https://picsum.photos/id/287/250/300" alt="Landscape with Mountains">
-                <figcaption>The Day</figcaption>
+                <img src="../Images/website_Icon/LittleCactus.jpg" alt="Landscape with Mountains">
+                <figcaption>Cute Plant</figcaption>
             </figure>
             <figure style="--c:#fff5">
-                <img src="https://picsum.photos/id/475/250/300" alt="Mountains">
-                <figcaption>The Night</figcaption>
+                <img src="../Images/website_Icon/LittleCactus.jpg" alt="Mountains">
+                <figcaption>Cute Plant</figcaption>
             </figure>
 
             <figure style="--c:#fff5;">
-                <img src="https://picsum.photos/id/287/250/300" alt="Mountains">
-                <figcaption>The Day</figcaption>
+                <img src="../Images/website_Icon/LittleCactus.jpg" alt="Mountains">
+                <figcaption>Cute Plant</figcaption>
             </figure>
             <figure style="--c:#fff5">
-                <img src="https://picsum.photos/id/475/250/300" alt="Mountains">
-                <figcaption>The Night</figcaption>
+                <img src="../Images/website_Icon/LittleCactus.jpg" alt="Mountains">
+                <figcaption>Cute Plant</figcaption>
             </figure>
 
             <figure>
-                <img src="https://picsum.photos/id/287/250/300" alt="Mountains">
-                <figcaption>The Day</figcaption>
+                <img src="../Images/website_Icon/LittleCactus.jpg" alt="Mountains">
+                <figcaption>Cute Plant</figcaption>
             </figure>
             <figure style="--c:#fff5">
-                <img src="https://picsum.photos/id/475/250/300" alt="Mountains">
-                <figcaption>The Night</figcaption>
+                <img src="../Images/website_Icon/LittleCactus.jpg" alt="Mountains">
+                <figcaption>Cute Plant</figcaption>
             </figure>
 
             <figure>
-                <img src="https://picsum.photos/id/287/250/300" alt="Mountains">
-                <figcaption>The Day</figcaption>
+                <img src="../Images/website_Icon/LittleCactus.jpg" alt="Mountains">
+                <figcaption>Cute Plant</figcaption>
             </figure>
             <figure style="--c:#fff5">
-                <img src="https://picsum.photos/id/475/250/300" alt="Mountains">
-                <figcaption>The Night</figcaption>
+                <img src="../Images/website_Icon/LittleCactus.jpg" alt="Mountains">
+                <figcaption>Cute Plant</figcaption>
             </figure>
 
             <figure>
-                <img src="https://picsum.photos/id/287/250/300" alt="Mountains">
-                <figcaption>The Day</figcaption>
+                <img src="../Images/website_Icon/LittleCactus.jpg" alt="Mountains">
+                <figcaption>Cute Plant</figcaption>
             </figure>
             <figure style="--c:#fff5">
-                <img src="https://picsum.photos/id/475/250/300" alt="Mountains">
-                <figcaption>The Night</figcaption>
+                <img src="../Images/website_Icon/LittleCactus.jpg" alt="Mountains">
+                <figcaption>Cute Plant</figcaption>
             </figure>
-        </div>    
+        </div>   
+        
+    </main> -->
+    <main>
+        <button id="addPlantButton" class="floating-button" title="Add New Button">&#43;</button>
+        <div class="container" id="collectionContainer">
+            <p class="no-collections-message">No collections made yet.</p>
+        </div>
     </main>
     <footer>
         <img id = "github" class="socialMediaIcon" src="../images/social_media/github.png" alt="Logo Small">
@@ -88,7 +96,57 @@
         <img id = "uaic" class="socialMediaIcon" src="../images/social_media/uaic_logo_small.png" alt="Logo Small">
     </footer>
 
-    <!-- Scripts -->
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            checkCollections();
+            document.getElementById('addPlantButton').addEventListener('click', addFigure);
+        });
+
+        function addFigure() {
+            var anchor = document.createElement('a');
+            anchor.href = "../html/PlantProfilePage.html"; 
+            anchor.setAttribute('target', '_blank'); 
+
+            var figure = document.createElement('figure');
+            figure.style.cssText = "--c:#4caf50";
+
+            var img = document.createElement('img');
+            img.src = "../Images/website_Icon/LittleCactus.jpg";
+            img.alt = "Cute Plant";
+
+            var caption = document.createElement('figcaption');
+            caption.textContent = 'Cute Plant';
+
+            figure.appendChild(img);
+            figure.appendChild(caption);
+
+            anchor.appendChild(figure);
+
+            document.querySelector('.container').appendChild(anchor);
+            checkCollections();
+        }
+
+        function checkCollections() {
+            var container = document.getElementById('collectionContainer');
+            var messageExists = container.querySelector('.no-collections-message');
+            var figuresExist = container.getElementsByTagName('figure').length > 0;
+
+            if (!figuresExist && !messageExists) {
+                var message = document.createElement('p');
+                message.className = 'no-collections-message';
+                message.textContent = 'No collections made yet.';
+                container.appendChild(message);
+            } else if (figuresExist && messageExists) {
+                container.removeChild(messageExists);
+            }
+
+            if (messageExists) {
+                messageExists.style.display = figuresExist ? 'none' : 'block';
+            }
+        }
+
+    </script>
+
     <script src="../scripts/footer.js"></script>
 </body>
 </html>
