Verified 50% of html files

--- a/html/blog.html
+++ b/html/blog.html
@@ -66,7 +66,7 @@
 
             <div id="AddNew"><p>Add new Blog</p></div>
           
-
+          </div>
 
         <div class="f-wrapper f-wrapper--2">
             <div class="f">
