--- a/html/contact.html
+++ b/html/contact.html
@@ -60,8 +60,8 @@
                 <input type="email" placeholder="My e‎-mail is" name="gmail" id="das" autocomplete="off">
               </div>
               <div class="subject">
-                <select placeholder="Subject line" name="subject" id="subject_input" required>
-                    <option disabled hidden selected>Subject line</option>
+                <select name="subject" id="subject_input" required>
+                    <option disabled hidden selected value="">Subject line</option>
                     <option id="option1">I'd like to suggest a feature</option>
                     <option id="option2">I'd like to ask a question</option>
                     <option id="option3">I'd like to improve the website</option>
