--- a/html/createNewBlog.html
+++ b/html/createNewBlog.html
@@ -66,6 +66,8 @@
                 <div id="Save"><p>Save</p></div>
             </div>
 
+        </div>
+
         <div class="f-wrapper f-wrapper--2">
             <div class="f">
                 <div class="flower__leaf flower__leaf--1"></div>
